spacing and json string fixes
Fixed excessive spacing between objects, and cleaned up the formatting of json strings in the output tests.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 300px 600px;
+  grid-template-columns: 300px 900px;
+  grid-template-rows: 500px;
   grid-gap: 10px;
   padding: 10px;
 }
